--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
+* {
+  box-sizing: border-box;
+}
 .App {
   text-align: center;
 }
@@ -14,14 +17,14 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #fff;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: #121213;
 }
 
 .App-link {
@@ -35,4 +38,21 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.box_row {
+  display: flex;
+}
+
+.box {
+  height: 62px;
+  width: 62px;
+  border: 2px solid #e68908;
+  margin-right: 5px;
+  margin-bottom: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 32px;
+  text-transform: uppercase;
 }
